# voxel-compression

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindOpenH264.cmake
include/: FFmpegDemuxer.h  NvCodecUtils.h  io.hpp  mapper.hpp
include/nvcodec/: FFmpegDemuxer.h  NvEncoder.h  NvEncoderGL.h
include/varch/: unarchiver.hpp  video_decompressor.hpp
include/varch/archive/: archiver.hpp
include/varch/unarchive/: statistics.hpp  unarchiver.hpp  video_decompressor.hpp
include/varch/utils/: common.hpp  filter_reader.hpp  io.hpp  linked_reader.hpp  padded_reader.hpp  unbounded_vector_writer.hpp
include/video/: compressor.hpp  decompressor.hpp
include/vocomp/: extractor.hpp  index.hpp  io.hpp  refiner.hpp  video_decompressor.hpp
include/vocomp/index/: compressor.hpp  decompressor.hpp  index.hpp
include/vocomp/refine/: extractor.hpp  header.hpp  pipe_factory.hpp  refiner.hpp
include/vocomp/refine/internal/: header.hpp
include/vocomp/utils/: common.hpp  self_owned_reader.hpp  unbounded_io.hpp  unbounded_vector_writer.hpp
include/vocomp/video/: compressor.hpp  decompressor.hpp  method.hpp
include/vocomp/video/devices/: cuda_encoder.hpp  d3d9_encoder.hpp  encoder.hpp  gl_encoder.hpp
include/vocomp/voxel/: compressor.hpp  decompressor.hpp
include/vocomp/voxel/internal/: util.hpp
include/voxel/: compressor.hpp  decompressor.hpp
include/voxel/internal/: util.hpp
src/: CMakeLists.txt  NvDecoder.cc  vocomp.cc
src/archive/: CMakeLists.txt  archiver.cc  iencoder.hpp  nvencoder_wrapper.cc  nvencoder_wrapper.hpp  video_compressor.cc  video_compressor.hpp
src/archive/backends/: CMakeLists.txt
src/archive/backends/nvenc/: NvEnCoder.cc  NvEncoder.h  NvEncoderCuda.h  nvencoder_wrapper.cc  nvencoder_wrapper.hpp
src/archive/backends/openh264/: CMakeLists.txt  isvc_encoder_wrapper.cc  isvc_encoder_wrapper.hpp
src/archive/nvenc/: NvEncoderChecker.h
src/extract/: CMakeLists.txt  extractor.cc  video_decompressor.cc
src/extract/nvdec/: NvCodecUtils.h
src/extract/tests/: CMakeLists.txt  test_extractor.cc
src/nv/: NvEncoderCuda.cc
src/refine/: CMakeLists.txt  nvencoder_wrapper.cc  nvencoder_wrapper.hpp  refiner.cc  video_compressor.cc  video_compressor.hpp
src/refine/nvenc/: NvEnCoder.cc  NvEncoderCuda.cc
src/unarchive/: CMakeLists.txt  idecoder.hpp  statistics.cc  unarchiver.cc  video_decompressor.cc
src/unarchive/backends/: CMakeLists.txt
src/unarchive/backends/nvdec/: CMakeLists.txt  NvCodecUtils.h  nvdecoder_async.cc  nvdecoder_async.hpp
src/unarchive/backends/openh264/: isvc_decoder_wrapper.cc  isvc_decoder_wrapper.hpp
src/utils/: CMakeLists.txt  filter_reader.hpp  linked_reader.hpp  padded_reader.hpp  self_owned_reader.hpp  unbounded_vector_writer.hpp
src/utils/tests/: CMakeLists.txt  test_linked_reader.cc  test_padded_reader.cc  test_unbounded_vector_writer.cc
src/video/: CMakeLists.txt  compressor.cc  decompressor.cc
src/video/devices/: cuda_encoder.cc  cuda_encoder.ii  d3d9_encoder.cc  d3d9_encoder.ii  encoder.cc  gl_encoder.cc
src/video/nv/: NvDecoder.cc  NvEnCoder.cc
src/video/nvdec/: NvDecoder.cc
src/video/nvenc/: NvEnCoder.cc  NvEncoderD3D9.ii
src/video_compress/: CMakeLists.txt  compressor.cc  linked_reader.hpp
src/video_compress/devices/: cuda_encoder.hpp  cuda_encoder.ii  d3d9_encoder.hpp  d3d9_encoder.ii  encoder.cc  encoder.hpp  gl_encoder.hpp  gl_encoder.ii
src/video_compress/nvenc/: NvEnCoder.cc  NvEncoderCuda.cc  NvEncoderCuda.ii  NvEncoderD3D9.cc  NvEncoderGL.cc  NvEncoderGL.ii
src/video_compress/tests/: CMakeLists.txt  test_linked_reader.cc  test_video_compress.cc  test_video_compression.cc
src/video_decompress/: CMakeLists.txt  decompressor.cc
src/video_decompress/nvdec/: NvDecoder.ii
src/video_decompress/tests/: CMakeLists.txt  test_video_decompress.cc
src/voxel/: compressor.cc
tests/: CMakeLists.txt  test_archive.cc  test_extractor.cc  test_io.cc  test_video_codec.cc  test_video_decomp.cc  test_video_decompression.cc
tests/utils/: test_linked_reader.cc  test_padded_reader.cc  test_unbounded_vector_writer.cc
tools/: CMakeLists.txt  vocomp.cc  vodecomp.cc  voprod.cc  voxel-archive.cc  voxel-info.cc  voxel-refine.cc
